FIX
FIXINGGGG
also theres too much sugar in my veins im going crazy olol

--- a/style.css
+++ b/style.css
@@ -16,15 +16,15 @@
 
 @media (min-aspect-ratio:16/9){
     .back-video{
-        width:90%;
-        height: 100%;;
+        width:;
+        height: ;;
     }
 }
 
 @media (max-aspect-ratio:16/9){
     .back-video{
-        width: 100px;
-        height:100% ;
+        width: ;
+        height: ;
     }
 }
 
@@ -58,44 +58,3 @@ nav ul li a{
     font-size: 17px;
 }
 
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-.dropdown .dropbtn {
-    font-size: 14px;
-    color: white;
-    border: none;
-    outline: none;
-    padding: 12px, 14px;
-    font-family: Tahoma;
-    margin: 0;
-}
-.navbar a:hover, .dropdown:hover .dropbtn {
-    outline: red;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: rgba(221, 221, 221, 0.904);
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
